cedarschema/test/corpus/cli/schema_a_1.txt
================================================================================
schema_a_1
================================================================================

entity Video in [Account, Album];

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))
    (entity_parents
      (type_list
        (name
          (identifier))
        (name
          (identifier))))))
