cedarschema/test/corpus/cli/schema_a_2.txt
================================================================================
schema_a_2
================================================================================

entity User in [UserGroup];

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))
    (entity_parents
      (type_list
        (name
          (identifier))))))
