cedarschema/test/corpus/cli/schema_a_3.txt
================================================================================
schema_a_3
================================================================================

entity UserGroup;

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))))
