cedarschema/test/corpus/cli/schema_a_4.txt
================================================================================
schema_a_4
================================================================================

entity Administrator;

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))))
