cedarschema/test/corpus/cli/schema_a_5.txt
================================================================================
schema_a_5
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_a/schema.cedarschema#L5

entity Photo in [Account, Album];

--------------------------------------------------------------------------------

(schema
  (comment)
  (entity_declaration
    (identifier_list
      (identifier))
    (entity_parents
      (type_list
        (name
          (identifier))
        (name
          (identifier))))))
