cedarschema/test/corpus/cli/schema_a_7.txt
================================================================================
schema_a_7
================================================================================

entity Account;

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))))
