cedarschema/test/corpus/cli/schema_b_1.txt
================================================================================
schema_b_1
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_b/schema.cedarschema#L1-L5

entity Photo in [Account, Album] {
  account: Account,
  admins: Set<User>,
  private: Bool
};

--------------------------------------------------------------------------------

(schema
  (comment)
  (entity_declaration
    (identifier_list
      (identifier))
    (entity_parents
      (type_list
        (name
          (identifier))
        (name
          (identifier))))
    (record_type
      (attribute_declaration
        (identifier)
        (type_reference
          (name
            (identifier))))
      (attribute_declaration
        (identifier)
        (type_reference
          (name
            (identifier))
          (type_reference
            (name
              (identifier)))))
      (attribute_declaration
        (identifier)
        (type_reference
          (name
            (identifier)))))))
