cedarschema/test/corpus/cli/schema_b_2.txt
================================================================================
schema_b_2
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_b/schema.cedarschema#L6

entity User in [UserGroup] { department: String, jobLevel: Long };

--------------------------------------------------------------------------------

(schema
  (comment)
  (entity_declaration
    (identifier_list
      (identifier))
    (entity_parents
      (type_list
        (name
          (identifier))))
    (record_type
      (attribute_declaration
        (identifier)
        (primitive_type))
      (attribute_declaration
        (identifier)
        (primitive_type)))))
