cedarschema/test/corpus/cli/schema_b_3.txt
================================================================================
schema_b_3
================================================================================

entity AccountGroup;

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))))
