cedarschema/test/corpus/cli/schema_b_4.txt
================================================================================
schema_b_4
================================================================================

entity Administrator;

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))))
