cedarschema/test/corpus/cli/schema_b_5.txt
================================================================================
schema_b_5
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_b/schema.cedarschema#L9

entity UserGroup;

--------------------------------------------------------------------------------

(schema
  (comment)
  (entity_declaration
    (identifier_list
      (identifier))))
