cedarschema/test/corpus/cli/schema_b_9.txt
================================================================================
schema_b_9
================================================================================

action listPhotos
  appliesTo {
    principal: [User],
    resource: [Album, Photo],
    context: { source_ip: __cedar::ipaddr }
  };

--------------------------------------------------------------------------------
(schema
  (action_declaration
    (action_name_list
      (identifier))
    (applies_to
      (principal_types
        (type_list
          (name
            (identifier))))
      (resource_types
        (type_list
          (name
            (identifier))
          (name
            (identifier))))
      (context_type
        (record_type
          (attribute_declaration
            (identifier)
            (name
              (identifier)
              (identifier))))))))
