cedarschema/test/corpus/cli/schema_c_1.txt
================================================================================
schema_c_1
================================================================================

entity Photo in [Account, Album];

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))
    (entity_parents
      (type_list
        (name
          (identifier))
        (name
          (identifier))))))
