cedarschema/test/corpus/cli/schema_c_3.txt
================================================================================
schema_c_3
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_c/schema.cedarschema#L3

entity Account;

--------------------------------------------------------------------------------

(schema
  (comment)
  (entity_declaration
    (identifier_list
      (identifier))))
