cedarschema/test/corpus/cli/schema_c_4.txt
================================================================================
schema_c_4
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_c/schema.cedarschema#L4

entity Album in [Account];

--------------------------------------------------------------------------------

(schema
  (comment)
  (entity_declaration
    (identifier_list
      (identifier))
    (entity_parents
      (type_list
        (name
          (identifier))))))
