cedarschema/test/corpus/cli/schema_c_5.txt
================================================================================
schema_c_5
================================================================================

entity UserGroup;

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))))
