cedarschema/test/corpus/cli/schema_c_6.txt
================================================================================
schema_c_6
================================================================================

entity User in [UserGroup];

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))
    (entity_parents
      (type_list
        (name
          (identifier))))))
