cedarschema/test/corpus/cli/schema_c_7.txt
================================================================================
schema_c_7
================================================================================

entity Administrator;

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))))
