cedarschema/test/corpus/cli/schema_c_8.txt
================================================================================
schema_c_8
================================================================================

// https://github.com/cedar-policy/cedar/blob/v4.11.2/cedar-policy-cli/sample-data/sandbox_c/schema.cedarschema#L9-L10

action view, delete, edit
  appliesTo { principal: [User], resource: [Photo, Video, Album] };

--------------------------------------------------------------------------------

(schema
  (comment)
  (action_declaration
    (action_name_list
      (identifier)
      (identifier)
      (identifier))
    (applies_to
      (principal_types
        (type_list
          (name
            (identifier))))
      (resource_types
        (type_list
          (name
            (identifier))
          (name
            (identifier))
          (name
            (identifier)))))))
