cedarschema/test/corpus/cli/schema_c_9.txt
================================================================================
schema_c_9
================================================================================

action listPhotos
  appliesTo { principal: [User], resource: [Album, Photo, Video] };

--------------------------------------------------------------------------------
(schema
  (action_declaration
    (action_name_list
      (identifier))
    (applies_to
      (principal_types
        (type_list
          (name
            (identifier))))
      (resource_types
        (type_list
          (name
            (identifier))
          (name
            (identifier))
          (name
            (identifier)))))))
