cedarschema/test/corpus/custom/nested_namespaces.txt
================================================================================
nested_namespaces
================================================================================

// https://github.com/cedar-policy/rfcs/pull/105

namespace App {
  namespace Users {
    namespace Internal {
      entity Employee;
    }

    entity User;
    entity Admin in [User];
  }

  namespace Resources {
    namespace Documents {
      entity Report {
        author: App::Users::Internal::Employee,
      };
    }
  }
}

--------------------------------------------------------------------------------
(schema
  (comment)
  (namespace
    (name
      (identifier))
    (namespace
      (name
        (identifier))
      (namespace
        (name
          (identifier))
        (entity_declaration
          (identifier_list
            (identifier))))
      (entity_declaration
        (identifier_list
          (identifier)))
      (entity_declaration
        (identifier_list
          (identifier))
        (entity_parents
          (type_list
            (name
              (identifier))))))
    (namespace
      (name
        (identifier))
      (namespace
        (name
          (identifier))
        (entity_declaration
          (identifier_list
            (identifier))
          (record_type
            (attribute_declaration
              (identifier)
              (name
                (identifier)
                (identifier)
                (identifier)
                (identifier)))))))))
