cedarschema/test/corpus/examples/gitapp.txt
================================================================================
gitapp
================================================================================

// https://github.com/cedar-policy/cedar-examples/blob/c251f7d1ad171bd12dee5d1d7a1cceaec994518f/cedar-policy-language-in-action/GitApp/gitapp.cedarschema#L1-L25

namespace GitApp {
  entity Issue, User, Application;
  entity Repo in [Application] = {
    "admins": Set<User>,
    "contributors"?: Set<User>,
    "reporters"?: Set<User>,
  };

  action addRepoAdmin, addRepoContributor, addRepoReporter appliesTo {
    principal: [User],
    resource: [Repo]
  };
  action deleteIssue, editIssue appliesTo {
    principal: [User],
    resource: [Repo]
  };
  action forkRepo, pullRepo, pushRepo appliesTo {
    principal: [User],
    resource: [Repo]
  };
  action addIssue, assignIssue, closeIssue appliesTo {
    principal: [User],
    resource: [Repo]
  };
}

--------------------------------------------------------------------------------

(schema
  (comment)
  (namespace
    (name
      (identifier))
    (entity_declaration
      (identifier_list
        (identifier)
        (identifier)
        (identifier)))
    (entity_declaration
      (identifier_list
        (identifier))
      (entity_parents
        (type_list
          (name
            (identifier))))
      (record_type
        (attribute_declaration
          (string
            (string_content))
          (set_type
            (name
              (identifier))))
        (attribute_declaration
          (string
            (string_content))
          (set_type
            (name
              (identifier))))
        (attribute_declaration
          (string
            (string_content))
          (set_type
            (name
              (identifier))))))
    (action_declaration
      (action_name_list
        (identifier)
        (identifier)
        (identifier))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier))))))
    (action_declaration
      (action_name_list
        (identifier)
        (identifier))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier))))))
    (action_declaration
      (action_name_list
        (identifier)
        (identifier)
        (identifier))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier))))))
    (action_declaration
      (action_name_list
        (identifier)
        (identifier)
        (identifier))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier))))))))
