cedarschema/test/corpus/examples/tags_n_roles_1.txt
================================================================================
tags_n_roles_1
================================================================================

entity Role;

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))))
