cedarschema/test/corpus/examples/tags_n_roles_2.txt
================================================================================
tags_n_roles_2
================================================================================

// https://github.com/cedar-policy/cedar-examples/blob/c251f7d1ad171bd12dee5d1d7a1cceaec994518f/cedar-example-use-cases/tags_n_roles/policies.cedarschema#L2-L15

entity User in [Role] {
  allowedTagsForRole: {
    "Role-A"?: {
        production_status?: Set<String>,
        country?: Set<String>,
        stage?: Set<String>,
    },
    "Role-B"?: {
        production_status?: Set<String>,
        country?: Set<String>,
        stage?: Set<String>,
    },
  },
};

--------------------------------------------------------------------------------

(schema
  (comment)
  (entity_declaration
    (identifier_list
      (identifier))
    (entity_parents
      (type_list
        (name
          (identifier))))
    (type_reference
      (record_type
        (attribute_declaration
          (identifier)
          (type_reference
            (record_type
              (attribute_declaration
                (string
                  (string_content))
                (type_reference
                  (record_type
                    (attribute_declaration
                      (identifier)
                      (type_reference
                        (name
                          (identifier))
                        (type_reference
                          (name
                            (identifier)))))
                    (attribute_declaration
                      (identifier)
                      (type_reference
                        (name
                          (identifier))
                        (type_reference
                          (name
                            (identifier)))))
                    (attribute_declaration
                      (identifier)
                      (type_reference
                        (name
                          (identifier))
                        (type_reference
                          (name
                            (identifier))))))))
              (attribute_declaration
                (string
                  (string_content))
                (type_reference
                  (record_type
                    (attribute_declaration
                      (identifier)
                      (type_reference
                        (name
                          (identifier))
                        (type_reference
                          (name
                            (identifier)))))
                    (attribute_declaration
                      (identifier)
                      (type_reference
                        (name
                          (identifier))
                        (type_reference
                          (name
                            (identifier)))))
                    (attribute_declaration
                      (identifier)
                      (type_reference
                        (name
                          (identifier))
                        (type_reference
                          (name
                            (identifier)))))))))))))))
