cedarschema/test/corpus/examples/tags_n_roles_3.txt
================================================================================
tags_n_roles_3
================================================================================

// https://github.com/cedar-policy/cedar-examples/blob/c251f7d1ad171bd12dee5d1d7a1cceaec994518f/cedar-example-use-cases/tags_n_roles/policies.cedarschema#L16-L22

entity Workspace {
  tags: {
    production_status?: Set<String>,
    country?: Set<String>,
    stage?: Set<String>,
  }
};

--------------------------------------------------------------------------------

(schema
  (comment)
  (entity_declaration
    (identifier_list
      (identifier))
    (type_reference
      (record_type
        (attribute_declaration
          (identifier)
          (type_reference
            (record_type
              (attribute_declaration
                (identifier)
                (type_reference
                  (name
                    (identifier))
                  (type_reference
                    (name
                      (identifier)))))
              (attribute_declaration
                (identifier)
                (type_reference
                  (name
                    (identifier))
                  (type_reference
                    (name
                      (identifier)))))
              (attribute_declaration
                (identifier)
                (type_reference
                  (name
                    (identifier))
                  (type_reference
                    (name
                      (identifier))))))))))))
