cedarschema/test/corpus/examples/tags_n_roles_4.txt
================================================================================
tags_n_roles_4
================================================================================

// https://github.com/cedar-policy/cedar-examples/blob/c251f7d1ad171bd12dee5d1d7a1cceaec994518f/cedar-example-use-cases/tags_n_roles/policies.cedarschema#L24

action "Role-A Actions";

--------------------------------------------------------------------------------

(schema
  (comment)
  (action_declaration
    (action_name_list
      (string
        (string_content)))))
