cedarschema/test/corpus/examples/tags_n_roles_5.txt
================================================================================
tags_n_roles_5
================================================================================

action "Role-B Actions";

--------------------------------------------------------------------------------
(schema
  (action_declaration
    (action_name_list
      (string
        (string_content)))))
