cedarschema/test/corpus/examples/tags_n_roles_8.txt
================================================================================
tags_n_roles_8
================================================================================

// https://github.com/cedar-policy/cedar-examples/blob/c251f7d1ad171bd12dee5d1d7a1cceaec994518f/cedar-example-use-cases/tags_n_roles/policies.cedarschema#L36-L39

action ReadWorkspace in ["Role-A Actions", "Role-B Actions"] appliesTo {
  principal: User,
  resource: Workspace,
};

--------------------------------------------------------------------------------

(schema
  (comment)
  (action_declaration
    (action_name_list
      (identifier))
    (action_parents
      (qualified_name_list
        (qualified_name
          (string
            (string_content)))
        (qualified_name
          (string
            (string_content)))))
    (applies_to
      (principal_types
        (type_list
          (name
            (identifier))))
      (resource_types
        (type_list
          (name
            (identifier)))))))
