cedarschema/test/corpus/prism/keywords.txt
================================================================================
keywords
================================================================================

// https://github.com/cedar-policy/prism-cedar/blob/v0.5.0/test/data/keywords.cedarschema#L2-L11

namespace NS {
  type T = {"type": __cedar::String, namespace: String};
  entity E in E = {action: String};
  entity R in [R] = {entity: E};
  action "a" appliesTo {
    principal: [NS::E],
    resource: [NS::R],
    context: {}
  };
}

--------------------------------------------------------------------------------
(schema
  (comment)
  (namespace
    (name
      (identifier))
    (common_type_declaration
      (identifier)
      (record_type
        (attribute_declaration
          (string
            (string_content))
          (name
            (identifier)
            (identifier)))
        (attribute_declaration
          (identifier)
          (primitive_type))))
    (entity_declaration
      (identifier_list
        (identifier))
      (entity_parents
        (type_list
          (name
            (identifier))))
      (record_type
        (attribute_declaration
          (identifier)
          (primitive_type))))
    (entity_declaration
      (identifier_list
        (identifier))
      (entity_parents
        (type_list
          (name
            (identifier))))
      (record_type
        (attribute_declaration
          (identifier)
          (name
            (identifier)))))
    (action_declaration
      (action_name_list
        (string
          (string_content)))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier)
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier)
              (identifier))))
        (context_type
          (record_type))))))
