cedarschema/test/corpus/prism/namespaces_1.txt
================================================================================
namespaces_1
================================================================================

// https://github.com/cedar-policy/prism-cedar/blob/v0.5.0/test/data/namespaces.cedarschema#L1-L17

// nicely formatted with spaces
namespace N1 {
  type C = {
    a: String
  };
  entity E;
  action a1 appliesTo {
    principal: [E],
    resource: [E],
    context: {}
  };
  action a2 appliesTo {
    principal: [N2::E],
    resource: [N2::E],
    context: {}
  };
}

--------------------------------------------------------------------------------

(schema
  (comment)
  (comment)
  (namespace
    (name
      (identifier))
    (common_type_declaration
      (identifier)
      (type_reference
        (record_type
          (attribute_declaration
            (identifier)
            (type_reference
              (name
                (identifier)))))))
    (entity_declaration
      (identifier_list
        (identifier)))
    (action_declaration
      (action_name_list
        (identifier))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier))))
        (context_type
          (type_reference
            (record_type)))))
    (action_declaration
      (action_name_list
        (identifier))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier)
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier)
              (identifier))))
        (context_type
          (type_reference
            (record_type)))))))
