cedarschema/test/corpus/prism/namespaces_2.txt
================================================================================
namespaces_2
================================================================================

// https://github.com/cedar-policy/prism-cedar/blob/v0.5.0/test/data/namespaces.cedarschema#L19-L34

// no spaces still valid and should highlight
namespace N2 {
  type C={"a":String};
  entity E;
  action "a1" appliesTo {
    principal:[N1::E],
    resource:[N1::E],
    context:{}
  };
  action "astar" in[N1::Action::"a1", N1::Action::"a2",a1,a2]appliesTo{context:{}};
  action "a2" appliesTo {
    principal:[E],
    resource:[E],
    context:{}
  };
}

--------------------------------------------------------------------------------

(schema
  (comment)
  (comment)
  (namespace
    (name
      (identifier))
    (common_type_declaration
      (identifier)
      (record_type
        (attribute_declaration
          (string
            (string_content))
          (primitive_type))))
    (entity_declaration
      (identifier_list
        (identifier)))
    (action_declaration
      (action_name_list
        (string
          (string_content)))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier)
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier)
              (identifier))))
        (context_type
          (record_type))))
    (action_declaration
      (action_name_list
        (string
          (string_content)))
      (action_parents
        (qualified_name_list
          (qualified_name
            (identifier)
            (identifier)
            (string
              (string_content)))
          (qualified_name
            (identifier)
            (identifier)
            (string
              (string_content)))
          (qualified_name
            (identifier))
          (qualified_name
            (identifier))))
      (applies_to
        (context_type
          (record_type))))
    (action_declaration
      (action_name_list
        (string
          (string_content)))
      (applies_to
        (principal_types
          (type_list
            (name
              (identifier))))
        (resource_types
          (type_list
            (name
              (identifier))))
        (context_type
          (record_type))))))
