cedarschema/test/corpus/prism/namespaces_3.txt
================================================================================
namespaces_3
================================================================================

// https://github.com/cedar-policy/prism-cedar/blob/v0.5.0/test/data/namespaces.cedarschema#L36-L37

// no namespace
entity Y;

--------------------------------------------------------------------------------

(schema
  (comment)
  (comment)
  (entity_declaration
    (identifier_list
      (identifier))))
