cedarschema/test/corpus/prism/tags_1.txt
================================================================================
tags_1
================================================================================

entity User = {
  jobLevel: Long,
} tags Set<String>;

--------------------------------------------------------------------------------
(schema
  (entity_declaration
    (identifier_list
      (identifier))
    (record_type
      (attribute_declaration
        (identifier)
        (primitive_type)))
    (entity_tags
      (set_type
        (primitive_type)))))
