cedarschema/test/corpus/prism/tags_2.txt
================================================================================
tags_2
================================================================================

// https://github.com/cedar-policy/prism-cedar/blob/v0.5.0/test/data/tags.cedarschema#L4-L6

entity Document = {
  owner: User,
} tags Set<String>;
